# blueberry

./: .gitignore  .woodpecker.yml  GNUmakefile  Make.config  README.md
.github/workflows/: auto-update.yml  checks.yml  ci.yml  packages.yml  release.yml  software.yml  world.yml
assets/: background (1)
doc/: AARCH64.md  ARCHITECTURE.md  BBUILD.md  BPM-INTERNALS.md  BPM.md  BUILD.md  CI.md  CONTRIBUTING.md  DEPLOY.md  HOSTING.md  INIT.md  KERNEL.md  PACKAGES.md  REPO-TRUST.md  ROADMAP.md  SECURITY-AUDIT-2026-07.md  SECURITY.md  SYSTEMD-MIGRATION.md  WEBSITE.md  WEBUI.md
etc/: group  hosts  network.conf  passwd  profile  shells  udhcpc.script
etc/bpm/: provided  repos.conf
etc/sysctl.d/: 10-blueberry.conf
init/runit/: 1
kernel/: config-7.0-server
release/: NOTES.md  isos.sha256
rootfs/etc/: fstab
src/bbconsole/: Cargo.toml
src/bbconsole/src/: api.rs  auth.rs  http.rs  main.rs
src/bbconsole/web/: app.js  index.html  style.css
src/bbdev/: Cargo.toml
src/bpm/: Makefile  archive.c  bpm  bpm.h  cmd.c  go.sum  install.c  main.c  main.go  net.c  repokey.h  sha256.c  sig.c  tls.c  vercmp.c
src/bpm-rs/: Cargo.toml  README.md
src/bpm/.obj/: bpm
src/busybox/: Makefile  config  config.full
src/dropbear/: Makefile
src/init/: 2  3  Makefile
src/initramfs/: Makefile  init  profile  selftest  shadow  test-init
src/installer/: Makefile  blueberry-install.c
src/kernel/: Makefile  config
src/systemd/: Makefile
tools/: blueberry-build-server.sh  blueberry-repo-sync.sh  bootstrap.sh  build-bpm.sh  build-pkgs.sh  buildserver-provision.sh  bump-package.sh  bundle-glibc.sh  check-pkgbuilds.sh  check-updates.sh  mkiso.sh  mkrepo.sh  mkrepokey.sh  qemu.sh  seed-kernel-db.sh  smoke-test.sh  systemd-boottest.sh  vm-pkgtest.sh
tools/bpm/: go.mod
tools/kernel/: fetch-kernel.sh  publish-kernel.sh
tools/pkg/: bpm-extract-record.sh  bpmrepo.sh  check-base-closure.sh  fetch-bpm.sh  seed-installed-db.sh
tools/release/: repo-publish.sh
tools/test/: boot-iso.sh  test-bpm.sh  test-install.sh
wiki/: Home.md  Hosting-a-Mirror.md  Package-Management.md  The-Kernel-Model.md
(+52 files in other folders)
