[package]
name = "blueberry-console"
version = "0.1.0"
edition = "2021"
description = "Blueberry management console — base layer (privileged API daemon)"
license = "GPL-3.0-or-later"

[[bin]]
name = "bbconsole"
path = "src/main.rs"

# Small, auditable surface: hand-rolled HTTP over rustls TLS (HTTPS by default,
# no plaintext ever), serde_json for the API, pam to authenticate real system
# users against /etc/shadow (Proxmox-style). ring is the crypto provider (same
# one bpm's rustls uses), so the build stays cmake/nasm-free.
[dependencies]
serde_json = "1"
pam = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"

[profile.release]
opt-level = 2
lto = true
strip = true
codegen-units = 1
